<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string
        name="label">Phonebook</string>
    <string
        name="permlab_samplesyncadapterAuthPassword">access to passwords for Phonebook accounts</string>
    <string
        name="permdesc_samplesyncadapterAuthPassword">Allows applications direct access to the passwords for the
        Phonebook account(s) you have configured.</string>
    <string
        name="permlab_samplesyncadapterAuth">view configured accounts</string>
    <string
        name="permdesc_samplesyncadapterAuth">Allows applications to see the usernames (email addresses) of
        the Phonebook account(s) you have configured.</string>
    <string
        name="notification_login_error">Touch to sign into your Phonebook account.</string>
    <string
        name="ui_activity_title">Sign-in</string>
    <string
        name="ui_activity_authenticating">Authenticating\u2026</string>
    <string
        name="login_activity_username_label">Username</string>
    <string name="county_code">Select country code</string>
     <string name="select_country_code">Choose a country</string>
    <string
        name="login_activity_password_label">Password</string>
    <string
        name="login_activity_ok_button">Sign in</string>
    <string
        name="login_activity_loginfail_text_both">The username or password isn\'t valid. A Phonebook account is
        required. Please try again. </string>
    <string
        name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.</string>
    <string
        name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>
    <string
        name="login_activity_loginfail_text_phmissing">Please enter your phone number</string>
    <string
        name="login_activity_newaccount_text">Sign in to your Phonebook account, or register for a new account. </string>
    <string
        name="sign_in_button_label">Sign in</string>
    <string
        name="back_button_label">Back</string>
    <string
        name="cancel_button_label">Cancel</string>
    <string
        name="profile_action">Sample profile</string>
    <string
        name="view_profile">View Profile</string>
    <string name="register">Register</string>
    <string name="hello">Hello World, WelcomeActivity!</string>
    <string name="app_name">Phonebook</string>
    <string name="sync">Synchronize</string>
    <string name="getting_data">Getting data from server ...</string>
    <string name="getting_phone_data">Getting phone contacts ...</string>
    <string name="no_groups">There are no groups. Please select add from the menu.</string>
    <string name="add_group">Add group</string>
    <string name="delete_group">Delete group</string>
    <string name="share_group">Sharing</string>
    <string name="add_contacts">Add</string>
    <string name="no_contacts">There are no contacts in this group</string>
    <string name="left_brace"> (</string>
    <string name="empty"></string>
    <string name="right_brace">)</string>
    <string name="no_contacts_to_add">There are no contacts to add to the group</string>
    <string name="not_sharing">You are not sharing this group with anybody</string>
    <string name="add_contact_to_share_with">Select contacts to share with</string>
    <string name="no_contacts_to_share_with">There are no contacts to share this group with</string>
    <string name="tel_number">Phone number</string>
    <string name="hello_widget">Hello this is my widget</string>
    <string name="widget_loading">Loading phonebook</string>
    <string name="confirm_phone_message">An SMS will be sent to the above phone. You will need to enter the confirmation code in the message to complete your registration or sign on.</string>
    <string name="valid_key_label">Please enter the validation code from the SMS</string>
    <string name="validate">Validate</string>
    <string name="valid_get_new_code">SMS me a new validation code</string>
    <string name="valid_get_new_code_text">If you have not receieved an SMS, click below to get another SMS with the validation code.</string>
    <string name="title_postal">Ok</string>
    <string name="Ok">Ok</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">De-select all</string>
    <string name="menu_done">Done</string>
    <string name="menu_doNotSave">Revert</string>
    <string name="editContact_title_edit">Edit contact</string>
    <string name="editContact_title_insert">New contact</string>
    <string name="edit_secondary_collapse">More</string>
    <string name="description_contact_photo">contact photo</string>
    <string name="description_minus_button">minus</string>
    <string name="description_plus_button">plus</string>
    <string name="nameLabelsGroup">Name</string>
    <string name="nicknameLabelsGroup">Nickname</string>
    <string name="organizationLabelsGroup">Organization</string>
    <string name="websiteLabelsGroup">Website</string>
    <string name="eventLabelsGroup">Event</string>
    <string name="phoneLabelsGroup">Phone</string>
    <string name="emailLabelsGroup">Email</string>
    <string name="imLabelsGroup">IM</string>
    <string name="postalLabelsGroup">Postal address</string>
    <string name="account_phone">Phone-only, unsynced</string>
    <string name="use_photo_as_primary">Use this photo</string>
    <string name="removePicture">Remove icon</string>
    <string name="changePicture">Change icon</string>
    <string name="attachToContact">Contact icon</string>
    <string name="savingContact">Saving contact\u2026</string>
    <string name="contactSavedToast">Contact saved.</string>
    <string name="contactSavedErrorToast">Error, unable to save contact changes.</string>
    <string name="dialog_new_contact_account">Create contact under account</string>
    <string name="photoPickerNotFoundText">No pictures are available on the phone.</string>
    <string name="take_photo">Take photo</string>
    <string name="pick_photo">Select photo from Gallery</string>
    <string name="chat">Chat</string>
    <string name="postal_street">Street</string>
    <string name="postal_pobox">PO box</string>
    <string name="postal_neighborhood">Neighborhood</string>
    <string name="postal_city">City</string>
    <string name="postal_region">State</string>
    <string name="postal_postcode">ZIP code</string>
    <string name="postal_country">Country</string>
    <string name="name_given">Given name</string>
    <string name="name_family">Family name</string>
    <string name="name_prefix">Name prefix</string>
    <string name="name_middle">Middle name</string>
    <string name="name_suffix">Name suffix</string>
    <string name="name_phonetic_given">Phonetic given name</string>
    <string name="name_phonetic_middle">Phonetic middle name</string>
    <string name="name_phonetic_family">Phonetic family name</string>
    <string name="ghostData_company">Company</string>
    <string name="ghostData_title">Title</string>
    <string name="label_notes">Notes</string>
    <string name="call_custom">Call <xliff:g id="custom">%s</xliff:g></string>
    <string name="call_home">Call home</string>
    <string name="call_mobile">Call mobile</string>
    <string name="call_work">Call work</string>
    <string name="call_fax_work">Call work fax</string>
    <string name="call_fax_home">Call home fax</string>
    <string name="call_pager">Call pager</string>
    <string name="call_other">Call</string>
    <string name="call_callback">Call callback</string>
    <string name="call_car">Call car</string>
    <string name="call_company_main">Call company main</string>
    <string name="call_isdn">Call ISDN</string>
    <string name="call_main">Call main</string>
    <string name="call_other_fax">Call fax</string>
    <string name="call_radio">Call radio</string>
    <string name="call_telex">Call telex</string>
    <string name="call_tty_tdd">Call TTY/TDD</string>
    <string name="call_work_mobile">Call work mobile</string>
    <string name="call_work_pager">Call work pager</string>
    <string name="call_assistant">Call <xliff:g id="assistant">%s</xliff:g></string>
    <string name="call_mms">Call MMS</string>
    <string name="sms_custom">Text <xliff:g id="custom">%s</xliff:g></string>
    <string name="sms_home">Text home</string>
    <string name="sms_mobile">Text mobile</string>
    <string name="sms_work">Text work</string>
    <string name="sms_fax_work">Text work fax</string>
    <string name="sms_fax_home">Text home fax</string>
    <string name="sms_pager">Text pager</string>
    <string name="sms_other">Text</string>
    <string name="sms_callback">Text callback</string>
    <string name="sms_car">Text car</string>
    <string name="sms_company_main">Text company main</string>
    <string name="sms_isdn">Text ISDN</string>
    <string name="sms_main">Text main</string>
    <string name="sms_other_fax">Text fax</string>
    <string name="sms_radio">Text radio</string>
    <string name="sms_telex">Text telex</string>
    <string name="sms_tty_tdd">Text TTY/TDD</string>
    <string name="sms_work_mobile">Text work mobile</string>
    <string name="sms_work_pager">Text work pager</string>
    <string name="sms_assistant">Text <xliff:g id="assistant">%s</xliff:g></string>
    <string name="sms_mms">Text MMS</string>
    <string name="email_home">Email home</string>
    <string name="email_mobile">Email mobile</string>
    <string name="email_work">Email work</string>
    <string name="email_other">Email</string>
    <string name="email_custom">Email <xliff:g id="custom">%s</xliff:g></string>
    <string name="email">Email</string>
    <string name="map_home">View home address</string>
    <string name="map_work">View work address</string>
    <string name="map_other">View address</string>
    <string name="map_custom">View <xliff:g id="custom">%s</xliff:g> address</string>
    <string name="chat_aim">Chat using AIM</string>
    <string name="chat_msn">Chat using Windows Live</string>
    <string name="chat_yahoo">Chat using Yahoo</string>
    <string name="chat_skype">Chat using Skype</string>
    <string name="chat_qq">Chat using QQ</string>
    <string name="chat_gtalk">Chat using Google Talk</string>
    <string name="chat_icq">Chat using ICQ</string>
    <string name="chat_jabber">Chat using Jabber</string>
    <string name="unknown">Unknown</string>
    <string name="customLabelPickerTitle">Custom label name</string>
    <string name="selectLabel">Select label</string>
    <string name="contact_read_only"><xliff:g id="source" example="Gmail">%1$s</xliff:g> contact information is not editable on this device.</string>
    <string name="account_type_format"><xliff:g id="source" example="Gmail">%1$s</xliff:g> contact</string>
    <string name="from_account_format">from <xliff:g id="source" example="user@gmail.com">%1$s</xliff:g></string>
    <string name="add_selected_contacts">No contacts selected</string>
    <string name="add_selected_contacts_to_share_with">Add selected contacts to share with</string>
    <string name="stop_sharing">Remove contacts form sharing</string>
    <string name="delete_selected_group">No groups selected</string>
    <string name="remove_contacts">Remove</string>
    <string name="remove_selected_contacts">No contacts selected</string>
    <string name="remove_sharing_contacts">Remove selected contacts from sharing</string>
    <string name="create_new_contact_to_share_with">Create new contact to share with</string>
    <string name="bump_contacts">Bump contacts</string>
</resources>