<?xml version="1.0" encoding="utf-8" ?>
<!--
/**
 * Copyright (c) 2010, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="5dip"
            android:paddingBottom="13dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip">
            <TextView android:text="@string/valid_key_label" android:id="@+id/textView2" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall"></TextView>
            <EditText
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minWidth="250dip"
                android:scrollHorizontally="true"
                android:capitalize="none"
                android:autoText="false"
                android:inputType="textEmailAddress" android:id="@+id/valid_code_edit"/>
            <TextView android:text="@string/empty" android:layout_width="wrap_content" android:id="@+id/validation_message" android:layout_marginBottom="5dip" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall"></TextView>
            <Button android:layout_width="wrap_content" android:minWidth="100dip" android:onClick="handleValidate" android:layout_height="wrap_content" android:text="@string/validate" android:layout_gravity="left" android:id="@+id/validate_button"></Button>
            <TextView android:text="@string/empty" android:id="@+id/message_bottom" android:layout_marginBottom="5dip" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
            <TextView android:text="@string/valid_get_new_code_text" android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_height="wrap_content"></TextView>
            <Button android:onClick="handleGetNewValidation" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/valid_get_new_code" android:id="@+id/valid_get_new_button"></Button>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
