<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <TextView android:textAppearance="?android:attr/textAppearanceSmall"
				android:textStyle="bold" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/login_activity_username_label" />
        <EditText android:id="@+id/facebookLogin_email" 
        		android:layout_width="fill_parent" 
        		android:layout_height="wrap_content" android:layout_weight="2"/>
        <TextView android:textColor="@color/warning" android:textAppearance="?android:attr/textAppearanceSmall"
				android:id="@+id/errorMessage" android:text="@string/empty"
				android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall"
				android:textStyle="bold" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/login_activity_password_label" />
        <EditText android:id="@+id/facebookLogin_password" 
        		android:layout_width="fill_parent" 
        		android:layout_height="wrap_content" android:layout_weight="2" android:inputType="textPassword"/>
        <Button android:text="Create My Account" 
        		android:id="@+id/facebookLogin" android:onClick="handleRegisteredFbLogin"
        		android:layout_height="wrap_content" android:layout_weight="1.00" android:layout_width="wrap_content"></Button>
       <Button android:text="Login" 
        		android:id="@+id/existingAccountfacebookLogin" android:onClick="loggedIntoExistingFbAccount"
        		android:layout_height="wrap_content" android:layout_width="wrap_content"></Button>
    
</LinearLayout>
